--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "bcakend_learning",
   "version": "1.0.0",
   "description": "bacend learning",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev":"nodemon src/index.js"
   },
   "keywords": [
     "node",
@@ -12,5 +13,8 @@
     "database"
   ],
   "author": "govind kumar gupta",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.4"
+  }
 }
