--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,3 @@
 PORT = 8000
-MONGODB_URI = mongodb+srv://govindnitrr2025:<your_Password>@cluster0.0fqm91u.mongodb.net
+MONGODB_URI = mongodb+srv://<yousername>:<your_Password>@cluster0.0fqm91u.mongodb.net
 CORS_ORIGIN=*
